typescript/checker/tests/conformance/decorators/class/constructor/decoratorOnClassConstructor1.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/conformance/decorators/class/constructor/decoratorOnClassConstructor1.ts:6:5
  |
6 |     @dec constructor() {}
  |     ^

